[gd_scene load_steps=12 format=3 uid="uid://c2re3criewxqs"]

[ext_resource type="Script" uid="uid://bjccng1v1nhc5" path="res://scripts/main_menu.gd" id="1_kjdsh"]
[ext_resource type="Texture2D" uid="uid://dcnhi7rf0enhi" path="res://assets/img/main_menu_bg.png" id="2_kjdsh"]
[ext_resource type="FontFile" uid="uid://cxmy521x5vl5n" path="res://assets/img/Orbitron-VariableFont_wght.ttf" id="3_5268a"]
[ext_resource type="Texture2D" uid="uid://c01gxtebywmw0" path="res://assets/img/atencao.png" id="3_m0ag6"]
[ext_resource type="Theme" uid="uid://coff0umnngb1n" path="res://main_menu_buttons.tres" id="4_5268a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x41nj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r641u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_clsku"]

[sub_resource type="Theme" id="Theme_bneil"]
TextEdit/font_sizes/font_size = 22
TextEdit/fonts/font = ExtResource("3_5268a")
TextEdit/styles/focus = SubResource("StyleBoxEmpty_x41nj")
TextEdit/styles/normal = SubResource("StyleBoxEmpty_r641u")
TextEdit/styles/read_only = SubResource("StyleBoxEmpty_clsku")

[sub_resource type="ButtonGroup" id="ButtonGroup_rhts7"]

[sub_resource type="Shortcut" id="Shortcut_06t4h"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 672.0
offset_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjdsh")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
size = Vector2i(1152, 648)

[node name="DesignSemNome" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(240.00003, 136.00002)
scale = Vector2(0.24999999, 0.2518518)
texture = ExtResource("2_kjdsh")

[node name="TextEdit" type="TextEdit" parent="SubViewportContainer/SubViewport"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 466.0
offset_right = 1040.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_bneil")
text = "Boa sorte, a causa do seu alien depende de vocÃª!"
metadata/_edit_lock_ = true

[node name="Atencao" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(224, 584)
scale = Vector2(0.07812499, 0.07812499)
texture = ExtResource("3_m0ag6")

[node name="MarginContainer" type="MarginContainer" parent="SubViewportContainer/SubViewport"]
offset_left = 24.0
offset_top = 32.0
offset_right = 194.0
offset_bottom = 168.0
script = ExtResource("1_kjdsh")

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/MarginContainer"]
layout_mode = 2

[node name="start" type="Button" parent="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_5268a")
toggle_mode = true
button_group = SubResource("ButtonGroup_rhts7")
shortcut = SubResource("Shortcut_06t4h")
text = "start"

[node name="options" type="Button" parent="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_5268a")
toggle_mode = true
button_group = SubResource("ButtonGroup_rhts7")
shortcut = SubResource("Shortcut_06t4h")
text = "options"

[node name="exit" type="Button" parent="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_5268a")
toggle_mode = true
button_group = SubResource("ButtonGroup_rhts7")
shortcut = SubResource("Shortcut_06t4h")
text = "exit"

[node name="about" type="Button" parent="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_5268a")
toggle_mode = true
button_group = SubResource("ButtonGroup_rhts7")
shortcut = SubResource("Shortcut_06t4h")
text = "about us"

[connection signal="pressed" from="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="SubViewportContainer/SubViewport/MarginContainer/VBoxContainer/about" to="." method="_on_about_pressed"]
